--- a/static/mainitalapok.css
+++ b/static/mainitalapok.css
@@ -1,12 +1,26 @@
-body {
-    background-image:url('circuit.jpg');
-}
-
 header h2 {
     letter-spacing: 0;
     margin-right: 0;
 }
 
-aside h2 {
-    background-image: linear-gradient(to right, rgba(128,128,128,.8), rgba(255,255,255,.8));
+article {
+    background-color: rgba(255,255,255,.8);
+}
+
+article h1 {
+    background-color: rgba(255,255,255,.8);
+    font-family: 'Inter', sans-serif;
+    font-size: 3em;
+    text-align: center;
+    padding: 1em 0;
+    color: black;
+}
+
+article a {
+    display: block;
+    padding: 2em;
+    text-decoration: none;
+}
+article a:hover {
+    background: orange;
 }
