--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image:url('creative.jpg');
+    background-image:url('circuit.jpg');
     background-size: 100%;
     background-attachment: fixed;
     color: white;
