--- a/static/mainindex.css
+++ b/static/mainindex.css
@@ -1,3 +1,17 @@
+aside {
+    background-color: rgba(255,255,255,.8);
+    padding: 1em;
+    color: black;
+    border-right:1px dotted;
+}
+
+aside h1, aside h2 {
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+}
+
+aside ol {line-height: 1.8em;}
+
 main h2 {
     background-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,0,0,.8), rgba(255,255,255,0));
     padding: .5em;
@@ -7,14 +21,25 @@ main h2 {
 
 main a {
     display: block;
+    text-decoration: none;
     color: black;
     cursor: pointer;
     padding: 1em;
     background-image: linear-gradient(to right, rgba(255,255,255,.8), rgba(255,255,255,.5));
-    text-decoration:dotted;
 }
 
 main a:hover {
     background-image: linear-gradient(to right, white, rgba(255,0,0,.8));
     color: black;
+}
+
+@media (min-width:768px){
+    aside {
+        float: left;
+        width:50%;
+    }
+    main {
+        float: right;
+        width:50%;
+    }
 }
