--- a/static/oldalak.css
+++ b/static/oldalak.css
@@ -21,12 +21,9 @@ main h3 {
 main a {
     text-decoration: none;
     color: red;
-    display: block;
+    /*display: block;*/
 }
-main a:hover {
-    background-color: orange;
-    color: white;
-}
+main a:hover {text-decoration: underline;}
 
 main p, ul, ol {
     text-align: justify;
