--- a/static/oldalak.css
+++ b/static/oldalak.css
@@ -41,7 +41,7 @@ main iframe {
     margin: auto;
 }
 
-/* NYITÓOLDAL PROJEKTEK LINKJEI BEGIN */
+/* NYITÓOLDAL PROJEKTEK LINKJEI BEGIN
 
 main article {
     margin: 1em auto;
@@ -64,4 +64,4 @@ main article a:hover {
     color: black;
 }
 
-/* NYITÓOLDAL PROJEKTEK LINKJEI END */
+NYITÓOLDAL PROJEKTEK LINKJEI END */
