--- a/static/oldalak.css
+++ b/static/oldalak.css
@@ -4,9 +4,8 @@ main {
 
 main h1 {
     font-family: 'Inter', sans-serif;
-    font-size: 3em;
-    text-align: center;
-    padding: 1em 0;
+    font-size: 1.5em;
+    padding: 1em;
     color: black;
 }
 
@@ -40,28 +39,3 @@ main iframe {
     display: block;
     margin: auto;
 }
-
-/* NYITÓOLDAL PROJEKTEK LINKJEI BEGIN
-
-main article {
-    margin: 1em auto;
-    width: 80%;
-    border-radius: 25px;
-}
-
-main article a {
-    font-weight: bold;
-    display: block;
-    padding: 1em 2em;
-    color: black;
-    border: 3px solid black;
-    border-radius: 25px;
-}
-
-main article a:hover {
-    border: 3px solid orange;
-    background: rgba(255,255,255,.5);
-    color: black;
-}
-
-NYITÓOLDAL PROJEKTEK LINKJEI END */
