--- a/static/mainindex.css
+++ b/static/mainindex.css
@@ -21,6 +21,16 @@
     text-align: justify;
 }
 
+main h1 {
+    background-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,0,0,.8), rgba(255,255,255,0));
+    padding: .5em;
+    text-align: center;
+    margin: 0;
+    color: white;
+    /*font-weight: bold;*/
+    font-family: 'Inter', sans-serif;
+}
+
 aside {
     background-color: rgba(255,255,255,.8);
     padding: 0 1em 1em 1em;
@@ -37,7 +47,10 @@ aside h2 {
     padding: .5em;
 }
 
-aside ol, aside p {line-height: 1.8em;}
+aside ol, aside p {
+    line-height: 1.8em;
+    margin: 0 0 0 1em;
+}
 
 article {
     background-color: rgba(255,255,255,.8);
