--- a/static/main.css
+++ b/static/main.css
@@ -62,14 +62,33 @@ nav a {
     text-align: center;
     padding: 1em 0;
     width: 8em;
-    border-bottom: 5px solid transparent;
+    /*border-bottom: 5px solid transparent;*/
 }
 
 nav a:hover {
     background-image: linear-gradient(to bottom, white, rgba(255,255,255,.5));
     color: red;
-    border-bottom: 5px solid orange;
+    /*border-bottom: 5px solid orange;*/
 }
+
+/* ======== DROPDOWN MENÜ BEGIN ======== */
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+  }
+  
+  .dropdown-content a {
+    display: block;
+    background-image: linear-gradient(to bottom, white, rgba(255,255,255,.5));
+    font-weight: normal;
+  }
+  .dropdown:hover .dropdown-content {display: block;}
+/* ======== DROPDOWN MENÜ END ======== */
 
 #header{
     position: sticky;
