--- a/static/mainindex.css
+++ b/static/mainindex.css
@@ -1,6 +1,7 @@
 #cim {
-    background-color: rgba(255,255,255,.8);
-    color: black;
+    /*background-color: rgba(255,255,255,.8);*/
+    background-color: rgba(26,26,29,.9);
+    color: white;
     padding: 1em;
     text-align:center;
     border-bottom: 1px dotted;
@@ -22,7 +23,8 @@
 }
 
 main h1 {
-    background-image: linear-gradient(to right, rgba(255,255,255,0), rgba(255,0,0,.8), rgba(255,255,255,0));
+    /*background-image: linear-gradient(to right, rgba(255,255,255,0),  red, rgba(255,255,255,0));*/
+    background-color: rgba(195,7,63,.8);
     padding: .5em;
     text-align: center;
     margin: 0;
@@ -32,9 +34,11 @@ main h1 {
 }
 
 aside {
-    background-color: rgba(255,255,255,.8);
+    /*background-color: rgba(255,255,255,.8);*/
+    background-color: rgba(26,26,29,.9);
     padding: 0 1em 1em 1em;
     border-right:1px dotted;
+    color: white;
 }
 
 aside h1, aside h2 {
@@ -53,11 +57,15 @@ aside ol, aside p {
 }
 
 article {
-    background-color: rgba(255,255,255,.8);
+    /*background-color: rgba(255,255,255,.8);*/
+    background-color: rgba(26,26,29,.9);
 }
 
 article h2 {
-    background-image: linear-gradient(to right, rgba(255,255,255,0), white, rgba(255,255,255,0));
+    /*background-image: linear-gradient(to right, rgba(255,255,255,0), white, rgba(255,255,255,0));*/
+    color: white;
+    border-top: 1px dotted white;
+    border-bottom: 1px dotted white;
     padding: .5em;
     text-align: center;
     font-family: 'Inter', sans-serif;
@@ -68,7 +76,7 @@ aside, article {border-bottom: 1px dotted;}
 aside a, article a {
     display: block;
     text-decoration: none;
-    color: red;
+    color: yellow;
 }
 
 aside a:hover {text-decoration:underline;}
@@ -76,7 +84,7 @@ aside a:hover {text-decoration:underline;}
 article a {
     display: block;
     text-decoration: none;
-    color: black;
+    color: yellow;
     cursor: pointer;
     padding: 1em;
 }
