--- a/static/oldalak.css
+++ b/static/oldalak.css
@@ -1,17 +1,19 @@
 main {
-    background-color: rgba(255,255,255,.8);
+    /*background-color: rgba(255,255,255,.8);*/
+    background-color: rgba(26,26,29,.9);
 }
 
 main h1 {
     font-family: 'Inter', sans-serif;
     /*font-size: 1.5em;*/
     padding: 1rem;
-    color: black;
+    color: white;
 }
 
 main h3 {
-    color: black;
-    background-image: linear-gradient(to right, white, red);
+    color: white;
+    /*background-image: linear-gradient(to right, white, red);*/
+    background-color: #C3073F;
     padding: 1rem;
     font-family: 'Inter', sans-serif;
     font-variant: small-caps;
@@ -19,14 +21,14 @@ main h3 {
 
 main a {
     text-decoration: none;
-    color: red;
+    color: yellow;
     /*display: block;*/
 }
 main a:hover {text-decoration: underline;}
 
 main p, ul, ol {
     text-align: justify;
-    color: rgb(0,12,51);
+    color: white;
     padding: 1em; /*ez azért kell, mert különben kis méretnél a bekezdésben lévő szöveg sem kap paddinget!*/
 }
 
