--- a/static/oldalak.css
+++ b/static/oldalak.css
@@ -42,6 +42,12 @@ main iframe {
     margin: auto;
 }
 
-#vizsga p, #vizsga ul {
-    width: 60%;
+@media (min-width:768px){
+    .vizs {
+        display: grid;
+        grid-template-columns: 60% 40%;
+    }
+    article {
+        border-left: 1px dotted white;
+    }
 }
