--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image:url('circuit.jpg');
+    background-image:url('circuitkicsi.jpg');
     background-size: 100%;
     background-attachment: fixed;
 }
@@ -99,6 +99,9 @@ nav a:hover {
     body {
         width: 80%;
         margin: auto;
+        background-image:url('circuit.jpg');
+        background-size: 100%;
+        background-attachment: fixed;
     }
 
     header h1 {
