--- a/static/mainindex.css
+++ b/static/mainindex.css
@@ -34,6 +34,8 @@ main h1 {
     font-family: 'Inter', sans-serif;
 }
 
+section {border-bottom: 1px dotted white;}
+
 aside {
     /*background-color: rgba(255,255,255,.8);*/
     background-color: rgba(26,26,29,.9);
