--- a/static/main.css
+++ b/static/main.css
@@ -106,6 +106,25 @@ footer img {
     margin: auto;
 }
 
+footer p {
+    text-align:center;
+    margin-bottom: 1rem;
+    font-weight: bold;
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+footer a {
+    text-decoration: none;
+    font-size: 80%;
+    color: yellow;
+}
+
+footer a:hover {
+    color: white;
+    transition: .5s;
+}
+
+
 @media (min-width: 768px){
     body {
         width: 80%;
