--- a/static/main.css
+++ b/static/main.css
@@ -107,6 +107,7 @@ footer img {
 }
 
 footer p {
+    color: white;
     text-align:center;
     margin-bottom: 1rem;
     font-weight: bold;
@@ -123,7 +124,6 @@ footer a:hover {
     color: white;
     transition: .5s;
 }
-
 
 @media (min-width: 768px){
     body {
