--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image:url('circuitkicsi.jpg');
+    background-image:url('25328kicsi.jpg');
     background-size: 100%;
     background-attachment: fixed;
 }
@@ -17,7 +17,6 @@ header {
     text-align: center;
     position: sticky;
     top: 0;
-    padding: 2em 10px;
 }
 
 header h1 {
@@ -52,8 +51,11 @@ header h2 {
 nav {
     text-align: center;
     /*background-image: linear-gradient(to top, white, rgba(255,255,255,.5));*/
-    background-color: rgba(26,26,29,.9);
+    background-color: rgba(26,26,29,.8);
     border-bottom: 1px solid white;
+
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
 nav a {
@@ -61,10 +63,8 @@ nav a {
     /*background-image: linear-gradient(to right, red, rgba(255,255,255,.8));*/
     font-weight: bold;
     color: white;
-    display: inline-block;
+    /*display: inline-block;*/
     text-align: center;
-    padding: 1em 0;
-    width: 8em;
 }
 
 nav a:hover {
@@ -86,6 +86,8 @@ nav a:hover {
     display: block;
     background-color: rgb(26,26,29);
     font-weight: normal;
+    border-bottom: 1px dotted white;
+    text-align: left;
   }
   .dropdown:hover .dropdown-content {display: block;}
 /* ======== DROPDOWN MENÜ END ======== */
@@ -94,7 +96,6 @@ nav a:hover {
     position: sticky;
     top: 0;
 }
-
 
 footer {
     background-color: rgba(195,7,63,.8);
@@ -129,9 +130,13 @@ footer a:hover {
     body {
         width: 80%;
         margin: auto;
-        background-image:url('circuit.jpg');
+        background-image:url('25328.jpg');
         background-size: 100%;
         background-attachment: fixed;
+    }
+
+    header {
+        padding: 2em 10px;
     }
 
     header h1 {
@@ -141,5 +146,16 @@ footer a:hover {
     header h2 {
         letter-spacing: 30px;
         margin-right: -30px;
+    }
+
+    nav {
+        display: block;
+        grid-template-columns:none;
+    }
+
+    nav a {
+        padding: 1em 0;
+        width: 8em;
+        display: inline-block;
     }
 }
