--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image:url('25328kicsi.jpg');
+    background-image:url('circuitkicsi.jpg');
     background-size: 100%;
     background-attachment: fixed;
 }
@@ -130,7 +130,7 @@ footer a:hover {
     body {
         width: 80%;
         margin: auto;
-        background-image:url('25328.jpg');
+        background-image:url('circuit.jpg');
         background-size: 100%;
         background-attachment: fixed;
     }
