--- a/static/mainindex.css
+++ b/static/mainindex.css
@@ -1,3 +1,9 @@
+body {
+    background-image:url('circuitkicsi.jpg');
+    background-size: 100%;
+    background-attachment: fixed;
+}
+
 #cim {
     /*background-color: rgba(255,255,255,.8);*/
     background-color: rgba(26,26,29,.9);
@@ -101,7 +107,12 @@ article a:hover {
     color: black;
 }
 
-@media (min-width:768px){
+@media (min-width:1081px){
+    body {
+        background-image:url('circuit.jpg');
+        background-size: 100%;
+        background-attachment: fixed;
+    }
     section {
         display: grid;
         grid-template-columns: 50% 50%;
