--- a/static/oldalak.css
+++ b/static/oldalak.css
@@ -1,3 +1,9 @@
+body {
+    background-image:url('circuitkicsi.jpg');
+    background-size: 100%;
+    background-attachment: fixed;
+}
+
 main {
     /*background-color: rgba(255,255,255,.8);*/
     background-color: rgba(26,26,29,.9);
@@ -42,7 +48,12 @@ main iframe {
     margin: auto;
 }
 
-@media (min-width:768px){
+@media (min-width:1081px){
+    body {
+        background-image:url('circuit.jpg');
+        background-size: 100%;
+        background-attachment: fixed;
+    }
     .vizs {
         display: grid;
         grid-template-columns: 60% 40%;
