--- a/static/mainkezd.css
+++ b/static/mainkezd.css
@@ -99,7 +99,7 @@ section a:hover {
 }
 
 #vizsgak {
-    background-image: url('business-5475661_640.jpg');
+    background-image: url('globe-8704013_1280.jpg');
     background-size:cover;
     background-position:center;
 }
