--- a/static/mainkezd.css
+++ b/static/mainkezd.css
@@ -1,4 +1,8 @@
-body {background-color: black;}
+body {
+    background-image:url('circuitkicsi.jpg');
+    background-size: 100%;
+    background-attachment: fixed;
+}
 
 .cim {
     /*background-color: rgba(255,255,255,.8);*/
@@ -112,6 +116,11 @@ section a:hover {
 
 
 @media (min-width:1081px){
+    body {
+        background-image:url('circuit.jpg');
+        background-size: 100%;
+        background-attachment: fixed;
+    }
     main {
         display: grid;
         grid-template-columns: 50% 50%;
