--- a/static/main.css
+++ b/static/main.css
@@ -20,6 +20,28 @@ header h1 {
     padding: 2rem 0;
 }
 
+.italapok {
+    background-image: url('circuit.jpg');
+    background-size: 100%;
+}
+
+.network {
+    background-image: url('network-4636686_1920.jpg');
+    background-size: 100%;
+}
+
+.os {
+    background-image: url('os-720223_1920.jpg');
+    background-size: 100%;
+    background-position: center;
+}
+
+.ai {
+    background-image: url('hand-4-7014643_1920.jpg');
+    background-size: 100%;
+    background-position: center;
+}
+
 main {
     /*background-color: rgba(26,26,29,.8);*/
     /*color: white;*/
@@ -83,6 +105,34 @@ iframe {
     display: block;
     margin: auto;
 }
+
+/* ====== INDEX BEMUTATKOZÓ OLDAL BEGIN ====== */
+
+#bemutat a {
+    display: block;
+    padding: 3rem;
+    font-size: 3rem;
+    color: black;
+    text-shadow: 2px 2px 3px white;
+    font-weight: bold;
+}
+
+#bemutat a:hover {
+    text-decoration: none;
+    background-color: rgb(239, 62, 54);
+    transition: ease-in-out .2s;
+}
+
+.italapok a, .network a {
+    background-image: linear-gradient(to left, rgba(255,255,255,0), white);
+}
+
+.os a, .ai a {
+    text-align: right;
+    background-image: linear-gradient(to right, rgba(255,255,255,0), white);
+}
+
+/* ====== INDEX BEMUTATKOZÓ OLDAL END ====== */
 
 footer {
     border-top: 1px solid #0881A3;
