--- a/static/main.css
+++ b/static/main.css
@@ -6,8 +6,11 @@ body {
 }
 
 header {
+    color: white;
+}
+
+#fofejlec {
     color: rgb(239, 62, 54);
-    padding: 0 .5rem;
 }
 
 header img {
@@ -18,6 +21,7 @@ header h1 {
     font-size: 3rem;
     text-shadow: 2px 2px 3px black;
     padding: 2rem 0;
+    margin: 0;
 }
 
 .italapok {
@@ -26,8 +30,9 @@ header h1 {
 }
 
 .network {
-    background-image: url('network-4636686_1920.jpg');
+    background-image: url('globe-8704013_1280.jpg');
     background-size: 100%;
+    background-position: center;
 }
 
 .os {
@@ -48,8 +53,10 @@ main {
     padding: 1em;
 }
 
-aside {padding-right: 1rem;}
+/*aside {padding-right: 1rem;}*/
 aside h1, aside p {padding-left: .5rem;}
+
+section {padding: 0 1rem;}
 
 section h1 {
     color: rgb(239, 62, 54);
@@ -169,9 +176,10 @@ footer a:hover {
     header {
         display: grid;
         grid-template-columns: 20% 80%;
-        border-bottom: 1px solid;
     }
-    header a {padding: 2rem 0;}
+    header a {
+        padding: 1rem 0;
+    }
     header img {
         display: block;
         border: 1px solid black;
