--- a/static/main.css
+++ b/static/main.css
@@ -11,6 +11,7 @@ header {
 
 #fofejlec {
     color: rgb(239, 62, 54);
+    /*color:#0881A3;*/
 }
 
 header img {
@@ -100,12 +101,15 @@ section h1 {
 }
 
 #t {
-    list-style-type: none;
-    padding: 0;
+    list-style-type: circle;
+    /*padding: 0;*/
     border-bottom: 1px dotted;
+    font-variant:small-caps;
 }
 
-h3 {border-bottom: 1px solid;}
+h3 {
+    border-bottom: 1px solid;
+}
 
 section a:hover {text-decoration: underline;}
 
