--- a/static/main.css
+++ b/static/main.css
@@ -25,41 +25,6 @@ header h1 {
     margin: 0;
 }
 
-.italapok {
-    background-image: url('circuit.jpg');
-    background-size: 100%;
-}
-
-.os {
-    background-image: url('os-720223_1920.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
-.network {
-    background-image: url('globe-8704013_1280.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
-.rendszuzem {
-    background-image: url('technology-8676538_640.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
-.ai {
-    background-image: url('hand-4-7014643_1920.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
-.office {
-    background-image: url('laptop-5714421_640.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
 main {
     /*background-color: rgba(26,26,29,.8);*/
     /*color: white;*/
@@ -106,11 +71,7 @@ hr {margin: 0;}
     border-top: 1px solid #0881A3;
 }
 
-section {padding: 0 1rem;}
-
-section h1 {
-    color: rgb(239, 62, 54);
-}
+section h1 {color: rgb(239, 62, 54);}
 
 #t {
     list-style-type: circle;
@@ -119,9 +80,47 @@ section h1 {
     font-variant:small-caps;
 }
 
+
+.italapok {
+    background-image: url('circuit.jpg');
+    background-size: 100%;
+}
+
+.os {
+    background-image: url('os-720223_1920.jpg');
+    background-size: 100%;
+    background-position: center;
+}
+
+.network {
+    background-image: url('globe-8704013_1280.jpg');
+    background-size: 100%;
+    background-position: center;
+}
+
+.rendszuzem {
+    background-image: url('technology-8676538_640.jpg');
+    background-size: 100%;
+    background-position: center;
+}
+
+.ai {
+    background-image: url('hand-4-7014643_1920.jpg');
+    background-size: 100%;
+    background-position: center;
+}
+
+.office {
+    background-image: url('laptop-5714421_640.jpg');
+    background-size: 100%;
+    background-position: center;
+}
+
 h3 {
     border-bottom: 1px solid;
 }
+
+section {padding: 0 1rem;}
 
 section a:hover {text-decoration: underline;}
 
@@ -132,28 +131,48 @@ iframe {
 
 /* ====== INDEX BEMUTATKOZÓ OLDAL BEGIN ====== */
 
-#bemutat a {
+/*#bemutat a {
     display: block;
     padding: 3rem;
     font-size: 3rem;
     color: black;
     text-shadow: 2px 2px 3px white;
     font-weight: bold;
+}*/
+
+.bal, .jobb {border-bottom: 1px solid;}
+
+#bemutat p {
+    background-color: rgba(255,255,255,.8);
+    /*padding: 2rem;
+    margin: 0 50% 0 0;*/
 }
 
 #bemutat a:hover {
     text-decoration: none;
-    background-color: rgb(239, 62, 54);
-    transition: ease-in-out .2s;
 }
 
-#bemutat .italapok a, #bemutat .network a, #bemutat .ai a {
-    background-image: linear-gradient(to left, rgba(255,255,255,0), white);
+button {
+    background-color: orange;
+    border: 1px solid orange;
+    padding: 0;
 }
 
-#bemutat .os a, #bemutat .rendszuzem a, #bemutat .office a {
-    text-align: right;
-    background-image: linear-gradient(to right, rgba(255,255,255,0), white);
+button a {
+    display: block;
+    color: white;
+    padding: .5rem;
+}
+
+button:hover {
+    background-color: white;
+    border: 1px solid orange;
+}
+
+button a:hover {
+    text-decoration: none;
+    color: orange;
+    
 }
 
 /* ====== INDEX BEMUTATKOZÓ OLDAL END ====== */
@@ -215,8 +234,49 @@ footer a:hover {
         padding: 0; 
     }
 
+
+
     p, section li {text-align: justify;}
 
+    /* aloldalakon */
     .R {float: right; width: 50%;}
     .L {float: left; width: 50%;}
+
+    /* főoldalon */
+    .jobb img {
+        float: right;
+        width: 40%;
+
+        width: 400px;
+        height: 400px;
+        object-fit: cover;
+
+        border-radius: 50%;
+    }
+    .jobb p {
+        float: left;
+        width: 50%;
+        padding: 2rem;
+        border-top: 1px solid;
+        border-left: 1px solid;
+    }
+    
+    .bal img {
+        float: left;
+        width: 40%;
+        padding: 2rem;
+
+        width: 400px;
+        height: 400px;
+        object-fit: cover;
+
+        border-radius: 50%;
+    }
+    .bal p {
+        float: right;
+        width: 50%;
+        padding: 2rem;
+        border-top: 1px solid;
+        border-right: 1px solid;
+    }
 }
