--- a/static/main.css
+++ b/static/main.css
@@ -6,8 +6,8 @@ body {
 }
 
 header {
-    color: white;
-    border-bottom: 1px solid;
+    color: rgb(239, 62, 54);
+    border-bottom: 1px solid ;
     padding: 0 .5rem;
 }
 
