--- a/static/index.css
+++ b/static/index.css
@@ -1,10 +1,8 @@
-#fulszoveg {
+.fulszoveg {
     font-family: "Roboto Condensed", sans-serif;
     color: rgb(239, 62, 54);
-    margin: 1rem;
-    padding: 1rem;
-    border-top: 1px solid;
-    border-left: 1px solid;
+    padding: 0 2rem;
+    font-weight: bold;
 }
 
 #bemutat div {background-color: #F5FFFA;}
@@ -41,6 +39,11 @@ button a:hover {
 }
 
 @media(min-width:1081px){
+    .fulszoveg {
+        margin: 0 20rem;
+        border-left: 1px solid;
+    }
+
     .bal h1, .jobb h1 {margin-left:2rem;}
     .bal {
         display: grid;
