--- a/static/main.css
+++ b/static/main.css
@@ -6,13 +6,13 @@ body {
 }
 
 header {
-    color: rgb(239, 62, 54);
-    border-bottom: 1px solid ;
-    padding: 0 .5rem;
+    color: white;
+    padding: 0 2rem;
 }
 
 #fofejlec {
     color: rgb(239, 62, 54);
+    border-bottom: 1px solid;
     /*color:#0881A3;*/
 }
 
@@ -23,7 +23,8 @@ header img {
 header h1 {
     font-size: 3rem;
     text-shadow: 2px 2px 3px black;
-    padding: 2rem 0;
+    padding: 3rem 0;
+    margin: 0;
 }
 
 main {
