--- a/static/main.css
+++ b/static/main.css
@@ -39,23 +39,26 @@ header h1 {
 
 .menu {
     /*background-color: cornflowerblue;*/
-    background-color: rgba(8,129,163,.8);
+    /*background-color: rgba(8,129,163,.8);*/
     overflow: hidden;
 }
 .menu a {
     display: block;
-    color: white;
+    color: #0881A3;
     padding: 1rem;
     text-decoration: none;
+    font-weight: bold;
+    border-bottom: 1px solid;
+    text-align: right;
 }
 .menu a:hover {
-    background-color: white;
+    background-color: rgba(255, 255, 255, .9);
     /*color: cornflowerblue;*/
     color: #0881A3;
 }
 
 #akt {
-    background-color: white;
+    background-color: rgba(255, 255, 255, .9);
     /*color: cornflowerblue;*/
     color: #0881A3;
 }
@@ -211,6 +214,8 @@ footer a:hover {
     }
 
     header h1 {text-align: center;}
+
+    .menu a {color: rgba(255, 255, 255, .9);}
 
     main {
         display: grid;
