--- a/static/main.css
+++ b/static/main.css
@@ -47,14 +47,12 @@ header h1 {
     color: #0881A3;
     padding: 1rem;
     text-decoration: none;
-    font-weight: bold;
-    border-bottom: 1px solid;
-    text-align: right;
+    font-size: 120%;
 }
 .menu a:hover {
-    background-color: rgba(255, 255, 255, .9);
     /*color: cornflowerblue;*/
-    color: #0881A3;
+    background-color: orangered;
+    color: white;
 }
 
 #akt {
@@ -214,8 +212,6 @@ footer a:hover {
     }
 
     header h1 {text-align: center;}
-
-    .menu a {color: rgba(255, 255, 255, .9);}
 
     main {
         display: grid;
